# Matrix-Master

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  business-flow.md  business-model-refactor.md  docker-compose.yml  pyproject.toml
apk/: .gitignore  README.md  local.properties.example  settings.gradle.kts
apk/app/: build.gradle.kts  proguard-rules.pro
apk/scripts/: dev-loop.sh  sign-hmac.sh
backend/: .pair_codes.json  alembic.ini  init_db.py
backend/matrix/: __init__.py  config.py  dev.py
backend/matrix/agent/: __init__.py  _default_repository.py  _notifier_webhook.py  _persona_config.py  _services.py  bootstrap.py  chat_tools.py  checkpoint.py  cost_guard.py  daily_digest.py  goal_stuck_watchdog.py  guards.py  ingest_viral.py  interact_policy.py  kpi.py  learning_prompt.py  llm_rate_limiter.py  orchestrator.py  orchestrator_runner.py  prompts.py  protocols.py  repository.py  run_manager.py  runner.py  state_machine.py  summarize.py  types.py  watcher.py
backend/matrix/api/: __init__.py  _agent_factory.py  app.py  deps.py
backend/matrix/db/: __init__.py  engine.py  models.py  session.py
backend/matrix/device/: __init__.py  account_binding.py  adapters.py  api.py  endpoints.py  hmac.py  key_manager.py  login_state.py  pair_codes.py  pairing.py  registry.py  secret_box.py  (+1 more)
backend/scripts/: backfill_business.py
backend/tests/: _fake_adapters.py  conftest.py  test_accounts_activate.py  test_accounts_persona_scope.py  test_agent.py  test_alerts_api.py  test_api.py  test_cost_guard.py  test_cross_business_authorization.py  test_daily_digest.py  test_db.py  test_device.py  test_device_retire.py  test_devices_pair_identity.py  test_devices_register_minimal.py  test_goal_create_validation.py  test_goal_first_round.py  test_goal_single_active.py  test_goal_stuck_watchdog.py  test_image_gen.py  test_ingest_viral.py  test_interact.py  test_interact_policy.py  test_kb.py  test_kb_business_scope.py  test_kpi.py  test_learning.py  test_llm.py  test_llm_rate_limiter.py  test_logs_route.py  test_loop_closed.py  test_monitoring.py  test_notes_status_transition.py  test_notifications_api.py  test_notifications_business_scope.py  test_notifier_webhook.py  test_orchestrator.py  test_orchestrator_worker.py  test_round_slot_allocator.py  test_scheduler.py  (+2 more)
deploy/caddy/: Caddyfile
deploy/headscale/: config.yaml  derp-map.yaml
deploy/prometheus/: prometheus.yml
docs/: PRD.md  README.md
docs/api/: apk-http.openapi.yaml  master-rest.openapi.yaml  mcp-tools-notes.md  mcp-tools.schema.json
docs/architecture/: SDD.md  threat-model.md
docs/database/: README.md  schema.sql
docs/deployment/: release-process.md  runbook.md
docs/development/: dev-setup.md
docs/operations/: faq.md  log-schema.md  monitoring-runbook.md  postmortem-template.md
docs/planning/: capacity-plan.md  cost-model.md
docs/testing/: kb-writing-guide.md  test-plan.md
docs/user/: manual.md
shell/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
shell/.devcontainer/: devcontainer.json
shell/src/: App.tsx  index.css  main.tsx
shell/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/icons/: README.md
shell/src-tauri/src/: error.rs  hmac.rs  keyring_store.rs  lib.rs  main.rs  notifications.rs  python_backend.rs  state.rs  system_tray.rs
shell/src-tauri/src/ipc/: commands.rs  handlers.rs  mod.rs
(+270 files in other folders)
