[package]
name = "matrix-master-shell"
version = "0.4.0"
description = "Matrix Master - Tauri desktop shell"
authors = ["Matrix Master Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "matrix_master_shell"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

log = "0.4"
env_logger = "0.11"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
